# poc-cometbft

./: .gitignore  Cargo.toml  README.md  TESTING_GUIDE.md  deploy-contracts.sh  docker-compose.yml  go.work
abci-kvstore/: Dockerfile  app.go  entrypoint.sh  go.mod  main.go  state.go
api-backend/: Dockerfile  go.mod  main.go
api-backend/client/: chain.go  kvstore.go
api-backend/handlers/: bounties.go  health.go  kvstore.go  tasks.go  util.go
contracts/task-bounty/: Cargo.toml
contracts/task-bounty/src/: contract.rs  error.rs  msg.rs  state.rs
docs/: 01-OVERVIEW.md  02-GLOSSARY.md  03-ARCHITECTURE.md  04-SETUP-GUIDE.md  05-TASK-MODULE-GUIDE.md  06-BOUNTY-CONTRACT-GUIDE.md  07-KVSTORE-GUIDE.md  08-API-REFERENCE.md  09-PRODUCTION-GUIDE.md  10-DEVELOPMENT-GUIDE.md  11-TROUBLESHOOTING.md
mychain/: Dockerfile  Makefile  go.mod
mychain/app/: ante.go  app.go  encoding.go  export.go
mychain/cmd/mychaind/: main.go  root.go
mychain/proto/: buf.gen.gogo.yaml  buf.yaml
mychain/proto/mychain/taskreg/v1/: genesis.proto  query.proto  tx.proto  types.proto
mychain/scripts/: init.sh
mychain/x/taskreg/: module.go
mychain/x/taskreg/keeper/: genesis.go  grpc_query.go  keeper.go  msg_server.go
mychain/x/taskreg/types/: codec.go  errors.go  events.go  expected_keepers.go  genesis.go  genesis.pb.go  keys.go  msgs.go  proto_descriptor.go  query.pb.go  tx.pb.go  types.pb.go
